--- a/Models/E2E/2024.06.30_FLY-TTS.md
+++ b/Models/E2E/2024.06.30_FLY-TTS.md
@@ -99,51 +99,48 @@ Our proposed FLY-TTS exploits the large speech model as a discriminator to enjoy
 
 ## 3.Methodology: 方法
 
+> As illustrated in Figure~\ref{fig:flytts}, our proposed FLY-TTS is based on the end-to-end VITS \cite{vits}, and the following briefly introduces the VITS.
+>
+> VITS is a conditional VAE with the objective of maximizing the variational lower bound of the log-likelihood $\log p_\theta(x|c)$ of the target data $x$ given the input condition $c$:
 
-As illustrated in Figure~\ref{fig:flytts}, our proposed FLY-TTS is based on the end-to-end VITS \cite{vits}, and the following briefly introduces the VITS.
+$$
+\begin{aligned}
+  \log p_\theta(x|c)\geq\mathbb{E}_{q_\phi(z|x)}\bigg[\log p_\theta(x|z){-}\log\frac{q_\phi(z|x)}{p_\theta(z|c)}\bigg],
+\end{aligned}
+$$
 
-VITS is a conditional VAE with the objective of maximizing the variational lower bound of the log-likelihood $\log p_\theta(x|c)$ of the target data $x$ given the input condition $c$:
-$$\begin{aligned}
-        \log p_\theta(x|c)\geq\mathbb{E}_{q_\phi(z|x)}\bigg[\log p_\theta(x|z){-}\log\frac{q_\phi(z|x)}{p_\theta(z|c)}\bigg],
-    \end{aligned}$$
-where $z$ is the latent variable, $p_\theta(z|c)$ is the prior distribution of $z$ given condition $c$, $p_\theta(x|z)$ is the likelihood of the data given $z$, and $q_\phi(z|x)$ is the approximate posterior distribution.
-The model comprises a posterior encoder, prior encoder, and decoder,
-corresponding to $q_\phi(z|x)$, $p_\theta(z|c)$, and $p_\theta(x|z)$, respectively.
-Additionally, sets of discriminators are employed for adversarial training to enhance the quality of the synthesized speech.
-
-\textbf{Prior encoder}: The prior encoder $E_{{\text{prior}}}$ receives input phonemes $c$ and predicts the prior distribution.
-It consists of a text encoder for input processing and a normalizing flow $f_\theta$ that improves the flexibility of the prior distribution.
-
-\textbf{Posterior encoder}: The posterior encoder $E_{{\text{posterior}}}$ operates on the linear spectrum to extract the mean and variance of the approximate posterior distribution.
-Since this module is only used for training and will not impact the inference speed, no modifications are made to the posterior encoder in our proposed methods.
-
-\textbf{Decoder}: The decoder $E_{{\text{decoder}}}$ generates waveforms from the latent $z$. This module is essentially the HiFi-GAN \cite{Hifi-gan} generator.
-
-\textbf{Discriminators}: The discriminators $D$ in VITS are similar to those in HiFi-GAN \cite{Hifi-gan}.
-They includes a set of multi-period discriminators and multi-scale discriminators, to improve the quality of the synthesized audio via adversarial training.
-
-The proposed FLY-TTS shares similarities with VITS, as depicted in Figure~\ref{fig:flytts}a.
-We outline the improvements of FLY-TTS in the following sections.
+> where $z$ is the latent variable, $p_\theta(z|c)$ is the prior distribution of $z$ given condition $c$, $p_\theta(x|z)$ is the likelihood of the data given $z$, and $q_\phi(z|x)$ is the approximate posterior distribution.
+> The model comprises a posterior encoder, prior encoder, and decoder, corresponding to $q_\phi(z|x)$, $p_\theta(z|c)$, and $p_\theta(x|z)$, respectively.
+> Additionally, sets of discriminators are employed for adversarial training to enhance the quality of the synthesized speech.
+>
+> \textbf{Prior encoder}: The prior encoder $E_{{\text{prior}}}$ receives input phonemes $c$ and predicts the prior distribution.
+> It consists of a text encoder for input processing and a normalizing flow $f_\theta$ that improves the flexibility of the prior distribution.
+>
+> \textbf{Posterior encoder}: The posterior encoder $E_{{\text{posterior}}}$ operates on the linear spectrum to extract the mean and variance of the approximate posterior distribution.
+> Since this module is only used for training and will not impact the inference speed, no modifications are made to the posterior encoder in our proposed methods.
+>
+> \textbf{Decoder}: The decoder $E_{{\text{decoder}}}$ generates waveforms from the latent $z$. This module is essentially the HiFi-GAN \cite{Hifi-gan} generator.
+>
+> \textbf{Discriminators}: The discriminators $D$ in VITS are similar to those in HiFi-GAN \cite{Hifi-gan}.
+> They includes a set of multi-period discriminators and multi-scale discriminators, to improve the quality of the synthesized audio via adversarial training.
+>
+> The proposed FLY-TTS shares similarities with VITS, as depicted in Figure~\ref{fig:flytts}a.
+> We outline the improvements of FLY-TTS in the following sections.
 
 ### Grouped parameter-sharing
 
-Parameter sharing is a widely used technique to improve parameter efficiency.
-To achieve a trade-off between model size and expressiveness power,
-we introduce the grouped parameter-sharing mechanism to the text encoder and flow-based model in the prior encoder.
+> Parameter sharing is a widely used technique to improve parameter efficiency.
+> To achieve a trade-off between model size and expressiveness power, we introduce the grouped parameter-sharing mechanism to the text encoder and flow-based model in the prior encoder.
+>
+> The original text encoder in VITS is a multi-layer transformer encoder \cite{transformer}.
+> Previous work has shown that there exists redundancy in the transformer layers, and parameter-sharing could effectively reduce model size without substantially compromising performance \cite{ALBERT,universal}.
+> As shown in the upper half of Figure~\ref{fig:flytts}b, we adopt a sequential grouped parameter-sharing strategy, assigning the same parameters to the sequential $m_1$ layers, with a total of $g_1 \times m_1$ layers, where $g_1$ is the number of groups.
+> When $g_1=1$, the grouped parameter-sharing mechanism becomes complete parameter sharing.
 
-The original text encoder in VITS is a multi-layer transformer encoder \cite{transformer}.
-Previous work has shown that there exists redundancy in the transformer layers, and parameter-sharing could effectively reduce model size without substantially compromising performance \cite{ALBERT,universal}.
-As shown in the upper half of Figure~\ref{fig:flytts}b, we adopt a sequential grouped parameter-sharing strategy,
-assigning the same parameters to the sequential $m_1$ layers, with a total of $g_1 \times m_1$ layers, where $g_1$ is the number of groups.
-When $g_1=1$, the grouped parameter-sharing mechanism becomes complete parameter sharing.
-
-Flow-based models also suffer from the problem of large memory footprints.
-Similar to the grouped parameter-sharing in the text encoder, we divide the $K=g_2\times m_2$ steps of flow $\mathbf{f}_1,\mathbf{f}_2, \cdots, \mathbf{f}_K$ into $g_2$ groups, each group containing $m_2$ flow steps.
-Inspired by \cite{Portaspeech, AdaVITS},
-we do not share the parameters of all modules in affine coupling layers.
-Instead, following NanoFlow \cite{Nanoflow}, we only share the parameters of the projection layer composed of WaveNet \cite{WaveNet} (as shown in the lower half of Figure~\ref{fig:flytts}b),
-while maintaining parameter independence across other modules.
-
+> Flow-based models also suffer from the problem of large memory footprints.
+> Similar to the grouped parameter-sharing in the text encoder, we divide the $K=g_2\times m_2$ steps of flow $\mathbf{f}_1,\mathbf{f}_2, \cdots, \mathbf{f}_K$ into $g_2$ groups, each group containing $m_2$ flow steps.
+> Inspired by \cite{Portaspeech, AdaVITS}, we do not share the parameters of all modules in affine coupling layers.
+> Instead, following NanoFlow \cite{Nanoflow}, we only share the parameters of the projection layer composed of WaveNet \cite{WaveNet} (as shown in the lower half of Figure~\ref{fig:flytts}b), while maintaining parameter independence across other modules.
 
 ### ConvNeXt based decoder
 
