--- a/Models/E2E/2024.06.30_FLY-TTS.md
+++ b/Models/E2E/2024.06.30_FLY-TTS.md
@@ -51,51 +51,50 @@
 
 ## 1.Introduction: 引言
 
-Text-to-speech (TTS) synthesis is the process of converting input text into speech.
-Recent advances in TTS synthesis have achieved significant improvements in high-quality speech synthesis \cite{app9194050,tan2021survey}.
-Most of the work has focused on improving the quality and naturalness of synthesized speech \cite{tacotron,glow-tts,vits,naturalspeech}.
-However, to apply TTS models in real-world applications typically faces three challenges:
-1) Current TTS models are usually too large to deploy on edge or mobile devices;
-2) The slow inference of the model limits its application in low computing resources;
-3) In general, larger model sizes tend to improve performance, and there is often a trade-off between the two factors.
+> Text-to-speech (TTS) synthesis is the process of converting input text into speech.
+> Recent advances in TTS synthesis have achieved significant improvements in high-quality speech synthesis \cite{app9194050,tan2021survey}.
+> Most of the work has focused on improving the quality and naturalness of synthesized speech \cite{tacotron,glow-tts,vits,naturalspeech}.
+> However, to apply TTS models in real-world applications typically faces three challenges:
+> 1) Current TTS models are usually too large to deploy on edge or mobile devices;
+> 2) The slow inference of the model limits its application in low computing resources;
+> 3) In general, larger model sizes tend to improve performance, and there is often a trade-off between the two factors.
 
-To address these challenges, in this paper, we propose \textbf{FLY-TTS}, a new \textbf{F}ast, \textbf{L}ightweight and high-qualit\textbf{Y} \textbf{T}ext-\textbf{T}o-\textbf{S}peech synthesis system.
-Based on VITS \cite{vits}, FLY-TTS demonstrates efficient inference capabilities and model size reduction, while maintaining comparable synthesis quality.
-Recent research has shown that the HiFi-GAN-based decoder is the main bottleneck of VITS with respect to inference speed \cite{mb-istft-vits}.
-Therefore, we suggest to use ConvNeXt blocks to speed up inference by generating Fourier spectral coefficients and reconstructing raw waveforms directly through the inverse short-time Fourier transform.
-To reduce the model size, we introduce the grouped parameter-sharing mechanism into the text encoder and flow-based model in VITS.
-By adjusting the number of groups, we can balance between model size and modeling capacity.
-To mitigate the decline in synthesis quality caused by model compression, we introduce a large pre-trained WavLM \cite{Wavlm} model as a discriminator for adversarial training.
-By leveraging self-supervised representation to furnish the generator with additional information, we aim to enhance the quality of synthesized speech.
-Experiments on the LJSpeech dataset \cite{ljspeech17} show that FLYTTS achieves a real-time factor of 0.0139 on Intel Core i9 CPU, 8.8 times faster than the baseline system (0.1221), and the parameters are compressed by 1.6 times.
+> To address these challenges, in this paper, we propose \textbf{FLY-TTS}, a new \textbf{F}ast, \textbf{L}ightweight and high-qualit\textbf{Y} \textbf{T}ext-\textbf{T}o-\textbf{S}peech synthesis system.
+> Based on VITS \cite{vits}, FLY-TTS demonstrates efficient inference capabilities and model size reduction, while maintaining comparable synthesis quality.
+> Recent research has shown that the HiFi-GAN-based decoder is the main bottleneck of VITS with respect to inference speed \cite{mb-istft-vits}.
+> Therefore, we suggest to use ConvNeXt blocks to speed up inference by generating Fourier spectral coefficients and reconstructing raw waveforms directly through the inverse short-time Fourier transform.
+> To reduce the model size, we introduce the grouped parameter-sharing mechanism into the text encoder and flow-based model in VITS.
+> By adjusting the number of groups, we can balance between model size and modeling capacity.
+> To mitigate the decline in synthesis quality caused by model compression, we introduce a large pre-trained WavLM \cite{Wavlm} model as a discriminator for adversarial training.
+> By leveraging self-supervised representation to furnish the generator with additional information, we aim to enhance the quality of synthesized speech.
+> Experiments on the LJSpeech dataset \cite{ljspeech17} show that FLYTTS achieves a real-time factor of 0.0139 on Intel Core i9 CPU, 8.8 times faster than the baseline system (0.1221), and the parameters are compressed by 1.6 times.
 
 ## 2.Related Works: 相关工作
 
 #### End-to-end TTS
 
 > End-to-end TTS directly synthesizes speech waveforms from text without explicit intermediate representations.
-It has gradually shifted from autoregressive models to non-autoregressive models.
-
-Autoregressive TTS models \cite{shen2018natural, tacotron} generate the next time-step output conditioned on previous frames, leading to large inference latency and robustness issues.
-Recent researches have focused on non-autoregressive TTS models \cite{fastspeech, glow-tts, vits, naturalspeech},
-which generate mel-spectrograms or raw waveforms in parallel.
-FastSpeech \cite{fastspeech} and FastSpeech2 \cite{fastspeech2} parallelize the generation of mel-spectrograms by predicting the length of the mel-spectrograms with external alignment models or tools.
-Glow-TTS \cite{glow-tts} combines flow models and dynamic programming to search for the most likely monotonic alignment between text and speech latent representations to achieve parallel TTS.
-To further enhance the quality of synthesized speech, VITS \cite{vits} adopts variational inference with normalizing flows to generate raw waveforms.
-The recently proposed NaturalSpeech \cite{naturalspeech} also uses a variational autoencoder (VAE) for end-to-end text-to-waveform generation, achieving human-level speech quality.
-While these models have made notable advancements in synthesis quality, they typically suffer from inefficient inference, impeding their deployment in real-world scenarios.
+> It has gradually shifted from autoregressive models to non-autoregressive models.
+>
+> Autoregressive TTS models \cite{shen2018natural, tacotron} generate the next time-step output conditioned on previous frames, leading to large inference latency and robustness issues.
+> Recent researches have focused on non-autoregressive TTS models \cite{fastspeech, glow-tts, vits, naturalspeech}, which generate mel-spectrograms or raw waveforms in parallel.
+> FastSpeech \cite{fastspeech} and FastSpeech2 \cite{fastspeech2} parallelize the generation of mel-spectrograms by predicting the length of the mel-spectrograms with external alignment models or tools.
+> Glow-TTS \cite{glow-tts} combines flow models and dynamic programming to search for the most likely monotonic alignment between text and speech latent representations to achieve parallel TTS.
+> To further enhance the quality of synthesized speech, VITS \cite{vits} adopts variational inference with normalizing flows to generate raw waveforms.
+> The recently proposed NaturalSpeech \cite{naturalspeech} also uses a variational autoencoder (VAE) for end-to-end text-to-waveform generation, achieving human-level speech quality.
+> While these models have made notable advancements in synthesis quality, they typically suffer from inefficient inference, impeding their deployment in real-world scenarios.
 
 #### Lightweight and fast TTS
 
 > Lightweight TTS aims to reduce model size and computational complexity while maintaining the quality of synthesized speech as much as possible.
-While some recent works \cite{NixTTS, Light-tts, SpeedySpeech, Lightspeech, EfficientSpeech, AdaVITS, mb-istft-vits} have shown progress in this direction, they could encounter certain challenges.
-Nix-TTS \cite{NixTTS}, Light-TTS \cite{Light-tts}, and SpeedySpeech \cite{SpeedySpeech} employ knowledge distillation to reduce parameters while hindering end-to-end training.
-LightSpeech \cite{Lightspeech} resorts to neural architecture search (NAS) to design lightweight models but requires huge computational resources during training.
-EfficientSpeech \cite{EfficientSpeech} adopts a lightweight U-Network to reduce parameters, but the synthesis quality still has room for improvement.
-The most similar work to ours may be AdaVITS \cite{AdaVITS}, which proposes some tricks to achieve lightweight TTS.
-However, it is tailored for speaker adaptation and incorporates PPG as a linguistic feature, introducing an additional PPG predictor module.
-MB-iSTFT-VITS \cite{mb-istft-vits} also uses iSTFT to synthesize raw waveforms, but the decoder still contains computationally intensive upsampling operations.
-Our proposed FLY-TTS exploits the large speech model as a discriminator to enjoy the benefits of self-supervised representation without affecting the generator.
+> While some recent works \cite{NixTTS, Light-tts, SpeedySpeech, Lightspeech, EfficientSpeech, AdaVITS, mb-istft-vits} have shown progress in this direction, they could encounter certain challenges.
+> Nix-TTS \cite{NixTTS}, Light-TTS \cite{Light-tts}, and SpeedySpeech \cite{SpeedySpeech} employ knowledge distillation to reduce parameters while hindering end-to-end training.
+> LightSpeech \cite{Lightspeech} resorts to neural architecture search (NAS) to design lightweight models but requires huge computational resources during training.
+> EfficientSpeech \cite{EfficientSpeech} adopts a lightweight U-Network to reduce parameters, but the synthesis quality still has room for improvement.
+> The most similar work to ours may be AdaVITS \cite{AdaVITS}, which proposes some tricks to achieve lightweight TTS.
+> However, it is tailored for speaker adaptation and incorporates PPG as a linguistic feature, introducing an additional PPG predictor module.
+> MB-iSTFT-VITS \cite{mb-istft-vits} also uses iSTFT to synthesize raw waveforms, but the decoder still contains computationally intensive upsampling operations.
+> Our proposed FLY-TTS exploits the large speech model as a discriminator to enjoy the benefits of self-supervised representation without affecting the generator.
 
 ## 3.Methodology: 方法
 
