--- a/Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md
+++ b/Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md
@@ -41,9 +41,9 @@
 - 数据:
   - [LJSpeech](../../Datasets/LJSpeech.md)
 - 对比:
-  - [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md) + [Parallel WaveGAN](../../Models/TTS2_Vocoder/2019.08.26_ParallelWaveGAN.md); 
-  - [Transformer TTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md) + [Parallel WaveGAN](../../Models/TTS2_Vocoder/2019.08.26_ParallelWaveGAN.md);
-  - [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md) + [Parallel WaveGAN](../../Models/TTS2_Vocoder/2019.08.26_ParallelWaveGAN.md);
+  - [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md) + [Parallel WaveGAN](../../Models/TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md); 
+  - [Transformer TTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md) + [Parallel WaveGAN](../../Models/TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md);
+  - [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md) + [Parallel WaveGAN](../../Models/TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md);
 - 复现:
   - 2020.06.25 [ming024/FastSpeech2](https://github.com/ming024/FastSpeech2) 论文 v1 版本
   - 2023.11.28 [open-mmlab/Amphion](https://github.com/open-mmlab/Amphion/tree/main/models/tts/fastspeech2)
