--- a/Datasets/2019.04.05_LibriTTS.md
+++ b/Datasets/2019.04.05_LibriTTS.md
@@ -31,7 +31,7 @@
 - 引用: 46
 - 被引: 768
 - 数据:
-  - [LibriSpeech](LibriSpeech.md)
+  - [LibriSpeech](2015.04.19_LibriSpeech.md)
 - 对比:
   - ?
 - 复现:
@@ -45,8 +45,8 @@
 <summary>原文</summary>
 
 > This paper introduces a new speech corpus called ***LibriTTS*** designed for text-to-speech use.
-> It is derived from the original audio and text materials of the [LibriSpeech](LibriSpeech.md) corpus, which has been used for training and evaluating automatic speech recognition systems.
-> The new corpus inherits desired properties of the [LibriSpeech](LibriSpeech.md) corpus while addressing a number of issues which make [LibriSpeech](LibriSpeech.md) less than ideal for text-to-speech work.
+> It is derived from the original audio and text materials of the [LibriSpeech](2015.04.19_LibriSpeech.md) corpus, which has been used for training and evaluating automatic speech recognition systems.
+> The new corpus inherits desired properties of the [LibriSpeech](2015.04.19_LibriSpeech.md) corpus while addressing a number of issues which make [LibriSpeech](2015.04.19_LibriSpeech.md) less than ideal for text-to-speech work.
 > 
 > The released corpus consists of 585 hours of speech data at 24kHz sampling rate from 2,456 speakers and the corresponding texts.
 > Experimental results show that neural end-to-end TTS models trained from the ***LibriTTS*** corpus achieved above 4.0 in mean opinion scores in naturalness in five out of six evaluation speakers.
@@ -56,8 +56,8 @@
 <br>
 
 本文介绍一个名为 ***LibriTTS*** 的新语音语料库, 专为文本转语音应用设计.
-该语料库源自 [LibriSpeech](LibriSpeech.md) 语料库的原始音频和文本材料, 该语料库已经被用于训练和评估自动语音识别 (ASR) 系统.
-新语料库继承了 [LibriSpeech](LibriSpeech.md) 语料库的一些所需特性, 同时也解决了该语料库在文本转语音应用中的一些问题.
+该语料库源自 [LibriSpeech](2015.04.19_LibriSpeech.md) 语料库的原始音频和文本材料, 该语料库已经被用于训练和评估自动语音识别 (ASR) 系统.
+新语料库继承了 [LibriSpeech](2015.04.19_LibriSpeech.md) 语料库的一些所需特性, 同时也解决了该语料库在文本转语音应用中的一些问题.
 
 发布的语料库包含来自 2,456 位说话人的 585 小时, 采样率为 24kHz 的语音数据, 以及相应的文本.
 实验结果表明, 基于 ***LibriTTS*** 语料库训练的神经端到端 TTS 模型在六位评估说话人的五位的平均意见得分 (MOS) 超过 4.0.
@@ -124,7 +124,7 @@
 > The VCTK corpus is popular for experimenting with multi-speaker TTS as it contains studio quality speech data from multiple speakers.
 > The Blizzard Challenge 2011 (BC2011) corpora provides a relatively large amount of reading speech from a single professional speaker.
 > It is distributed under a non-commercial license.
-> The [LJSpeech](LJSpeech.md), M-AILABS, and Blizzard Challenge 2013 (BC2013) corpora include tens of hours of audio and text from audiobooks read by single speakers.
+> The [LJSpeech](2017.07.05_LJSpeech.md), M-AILABS, and Blizzard Challenge 2013 (BC2013) corpora include tens of hours of audio and text from audiobooks read by single speakers.
 > The LJspeech and M-AILABS corpora are comprised of non-professional audiobooks from the LibriVox project  and distributed under a non-restrictive license, whereas the BC2013 is read by a professional speaker but distributed under a non-commercial license like BC2011.
 > As they are audiobook recordings, they contain expressive lines and a wide range of prosodic variation.
 > They are often used for building single-speaker TTS voices.
@@ -246,7 +246,7 @@
 <summary>原文</summary>
 
 > This paper introduced the ***LibriTTS*** corpus, which was designed for TTS use.
-> It was derived from the original audio and text materials of the [LibriSpeech](LibriSpeech.md) corpus, by automatically aligning audiobooks and their texts, segmenting them into utterances, and filtering noisy transcripts and audio recordings.
+> It was derived from the original audio and text materials of the [LibriSpeech](2015.04.19_LibriSpeech.md) corpus, by automatically aligning audiobooks and their texts, segmenting them into utterances, and filtering noisy transcripts and audio recordings.
 > The corpus consists of 585 hours of speech data at 24kHz sampling rate from 2,456 speakers and its corresponding texts.
 > To our knowledge this is the largest TTS-specific corpus.
 > We demonstrated that Tacotron models trained from this corpus produced naturally sounding speech.
@@ -260,7 +260,7 @@
 <br>
 
 本文介绍专为文本转语音应用设计的 ***LibriTTS*** 语料库.
-通过自动对齐有声书和对应文本, 分割成语句, 并过滤掉噪声转写和音频记录, 从 [LibriSpeech](LibriSpeech.md) 语料库的原始音频和文本材料中衍生而来.
+通过自动对齐有声书和对应文本, 分割成语句, 并过滤掉噪声转写和音频记录, 从 [LibriSpeech](2015.04.19_LibriSpeech.md) 语料库的原始音频和文本材料中衍生而来.
 该语料库包含来自 2,456 位说话人的 585 小时, 采样率为 24kHz 的语音数据, 以及相应的文本.
 据我们所知, 这是目前最大的 TTS 专用语料库.
 我们展示了基于该语料库训练的 Tacotron 模型生成自然流畅的语音.
